@@ -3,13 +3,17 @@ package com.lxy.springsecuritystudy.model.dto;
 import com.lxy.springsecuritystudy.model.entity.User;
 import lombok.Data;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 用户登录信息封装类，实现了 Spring Security 的 UserDetails 接口，用于存储用户的认证和授权信息。
+ *
  * @Author ：AngryYYYYYY
  * @Date ：Created in 2024/8/19 20:59
  * @Description：包含用户实体和用户权限列表，提供用户认证时的基本信息。
@@ -17,9 +21,13 @@ import java.util.List;
 @Data
 public class LoginUser implements UserDetails {
     private User user;  // 用户实体对象，用于获取用户详细信息
+    List<String> roles; // 用户拥有的角色列表
+    //authorities集合不需要序列化,只需要序列化permissions集合即可
+    private transient List<SimpleGrantedAuthority> authorities;
 
     /**
      * 构造函数，接收一个用户实体作为参数。
+     *
      * @param user 用户实体对象
      */
     public LoginUser(User user) {
@@ -27,16 +35,33 @@ public class LoginUser implements UserDetails {
     }
 
     /**
+     * 构造函数，接收一个用户实体和角色列表作为参数。
+     *
+     * @param user  用户实体对象
+     * @param roles 角色列表
+     */
+    public LoginUser(User user, List<String> roles) {
+        this.user = user;
+        this.roles = roles;
+        this.authorities = roles != null ? roles.stream()
+                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                .collect(Collectors.toList()) : null;
+    }
+
+
+    /**
      * 获取用户的权限列表。
-     * @return 用户的权限集合，当前实现返回一个空列表。
+     *
+     * @return 用户的权限集合，如果用户无角色，则返回空列表。
      */
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();  // 返回空的权限列表
+        return authorities == null ? Collections.emptyList() : authorities;
     }
 
     /**
      * 获取用户的密码。
+     *
      * @return 用户密码
      */
     @Override
@@ -46,6 +71,7 @@ public class LoginUser implements UserDetails {
 
     /**
      * 获取用户的用户名。
+     *
      * @return 用户名
      */
     @Override
@@ -55,6 +81,7 @@ public class LoginUser implements UserDetails {
 
     /**
      * 账户是否未过期。
+     *
      * @return true 表示未过期
      */
     @Override
@@ -64,6 +91,7 @@ public class LoginUser implements UserDetails {
 
     /**
      * 账户是否未锁定。
+     *
      * @return true 表示未锁定
      */
     @Override
@@ -73,6 +101,7 @@ public class LoginUser implements UserDetails {
 
     /**
      * 凭证是否未过期。
+     *
      * @return true 表示凭证未过期
      */
     @Override
@@ -82,6 +111,7 @@ public class LoginUser implements UserDetails {
 
     /**
      * 用户是否启用。
+     *
      * @return true 表示启用
      */
     @Override
